cmake_minimum_required(VERSION 3.23)
project(OS_course C)

set(CMAKE_C_STANDARD 11)

add_executable(OS_course main.c week4/ex1.c week4/ex2.c week4/ex3.c week4/ex4.c week5/channel.c week5/ex2.c week5/ex3.c week5/ex4.c week6/ex1.c week6/ex2.c week6/ex3.c week8/ex2.c week8/ex3.c week8/ex4.c week8/ex5.c week9/ex2.c week9/ex4.c week10/ex1.c week12/ex2.c week13/ex2.c week14/ex1.c)
